<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    

    <RelativeLayout 
        android:id="@+id/mainTopLayoutIntro"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        >

        <ImageView
            android:id="@+id/headerMainIntro"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="@drawable/sub_header"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="backToMainActivity"
             />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/mainBottomLayoutIntro"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        
		<TableLayout 
		    android:id="@+id/tblMenuMainA"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/footer"
	        android:stretchColumns="*"
	       >
	       	
		        <com.google.ads.AdView
			        android:id="@+id/adViewMainIntro"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        ads:adSize="BANNER"
			        ads:adUnitId="a1512d725538489"
			        ads:loadAdOnCreate="true" >
				    
				</com.google.ads.AdView>
		    
		    <TableRow 
		        android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_gravity="center_horizontal"
	        	
		        >
		        <ImageButton 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:scaleType="fitCenter"
			        android:layout_gravity="center"
			        android:background="@drawable/btnintroduce"
			        android:onClick="openIntroduce"
			        />
		        <ImageButton
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:scaleType="fitCenter"
			        android:layout_gravity="center"
			        android:background="@drawable/btnsetting"
			        android:onClick="openSetting"
			        />
		        <ImageButton 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:scaleType="fitCenter"
			        android:layout_gravity="center"
			        android:background="@drawable/btntheme"
			        android:onClick="openTheme"
			        />
		        <ImageButton 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:scaleType="fitCenter"
			        android:layout_gravity="center"
			        android:background="@drawable/btnbookstore"
			        android:onClick="openBookstore"
			        />
		    </TableRow>
		    
		</TableLayout>
		
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_below="@id/mainTopLayoutIntro"
        android:layout_above="@id/mainBottomLayoutIntro"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
		android:background="@drawable/bg_details"
		 >
        <ImageView 
	        android:id="@+id/mainleft"
	        android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
	       	android:src="@drawable/title_first_introduction"
	       	android:scaleType="centerCrop"
	       	android:adjustViewBounds="true"
        />
        
        <LinearLayout 
	        android:layout_width="match_parent" 
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/mask"
	        android:padding="10dp"
	        android:layout_margin="10dp"
	        >
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtWhatIs"
	        	android:textColor="@drawable/linkstate"
	        	android:textStyle="normal"
	        	android:textSize="15sp"
	        	android:layout_marginBottom="10dp"
	        	
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtWhatIs1"
	        	android:textColor="#fff"
	        	android:textStyle="normal"
	        	android:textSize="10sp"
	        	android:layout_marginBottom="10dp"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtWhatIs2"
	        	android:textColor="#fff"
	        	android:textStyle="normal"
	        	android:textSize="10sp"
	        	android:layout_marginBottom="10dp"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtHowOpen"
	        	android:textColor="@drawable/linkstate"
	        	android:textStyle="normal"
	        	android:textSize="15sp"
	        	android:layout_marginBottom="10dp"
	        	android:onClick="clickHowTo"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtHowOpen1"
	        	android:textColor="#fff"
	        	android:textStyle="normal"
	        	android:textSize="10sp"
	        	android:layout_marginBottom="10dp"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtConvert"
	        	android:textColor="@drawable/linkstate"
	        	android:textStyle="normal"
	        	android:textSize="15sp"
	        	android:layout_marginBottom="10dp"
	        	android:onClick="clickConvert"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtConvert1"
	        	android:textColor="#fff"
	        	android:textStyle="normal"
	        	android:textSize="10sp"
	        	android:layout_marginBottom="10dp"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtWhereDownload"
	        	android:textColor="@drawable/linkstate"
	        	android:textStyle="normal"
	        	android:textSize="15sp"
	        	android:layout_marginBottom="10dp"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtLink1"
	        	android:textColor="#fff"
	        	android:textStyle="normal"
	        	android:textSize="10sp"
	        	android:layout_marginBottom="10dp"
	        	android:onClick="clickManyBook"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtLink2"
	        	android:textColor="#fff"
	        	android:textStyle="normal"
	        	android:textSize="10sp"
	        	android:layout_marginBottom="10dp"
	        	android:onClick="clickSnee"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtLink3"
	        	android:textColor="#fff"
	        	android:textStyle="normal"
	        	android:textSize="10sp"
	        	android:layout_marginBottom="10dp"
	        	android:onClick="clickMobileRead"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtLink4"
	        	android:textColor="#fff"
	        	android:textStyle="normal"
	        	android:textSize="10sp"
	        	android:layout_marginBottom="10dp"
	        	android:onClick="clickFeedBook"
	            />
	        <TextView 
	            android:layout_width="match_parent" 
	        	android:layout_height="wrap_content"
	        	android:text="@string/txtLink5"
	        	android:textColor="#fff"
	        	android:textStyle="normal"
	        	android:textSize="10sp"
	        	android:layout_marginBottom="10dp"
	        	android:onClick="clickVNBook"
	            />
		</LinearLayout>
		
	</LinearLayout>
	
</RelativeLayout>
